2004-02-05	Gaius Mulley <gaius@glam.ac.uk>

	* fixed bug as demonstrated in
          testsuite/gm2/pim/pass/subrange4.mod
	* all regression tests now pass on the *86 platform
	  under Debian Woody.
	
2004-02-05	Gaius Mulley <gaius@glam.ac.uk>

	* fixed more constant subrange bugs.
	* added new quad to delimit the start of declaration
	  scope of a procedure.
	* regression test failures reduced from 9 to 3.

2004-01-03	Gaius Mulley <gaius@glam.ac.uk>

	* fixed bugs in forward and previous references within gm2.texi
        * fixed more constant set conversion bugs which reduces
	  the number of regression failures from 15 to 9.

2003-12-26	Gaius Mulley <gaius@glam.ac.uk>

	* increased the number of regression tests to 1332
	* gm2 passes 1317 and fails 15
	* many bug fixes..
	* improved documentation, gm2.texi. Now contains
	  a ebnf description of GNU Modula-2 extracted from
	  bnf/m2.bnf.
	* completed the optional final parameter argument.
	* reimplemented the CAP standard function so that it
	  can be used within constant expressions.
	
2003-11-27	Gaius Mulley <gaius@glam.ac.uk>

	* fixed a bug in the handling of the -Wcpp option so that it uses
	  -traditional-cpp
	* integrated the gm2 and m2f regression tests into the GNU GCC
          dejagnu format - all the m2f tests are now used to test gm2.
	* started work on a minor extension to GNU Modula-2 which allows
	  the last parameter to be optional. In turn this allows a
	  Modula-2 implementation of the ISO module COROUTINES which is
	  in development.
	
2003-11-13	Gaius Mulley <gaius@glam.ac.uk>

	* modified the generated .h files to be prefixed with `G' to avoid
	  name clashes which in turn allows gm2 to be built under a vfat
	  file system.
	
2003-11-07	Gaius Mulley <gaius@glam.ac.uk>

	* changed the flag name -Wverbose to -Wsources
	
2003-11-07	Gaius Mulley <gaius@glam.ac.uk>

	* improved array index type debugging description in gccgm2.c
	  which allows gdb to understand that arrays are declared ARRAY