@@ -8910,7 +8910,7 @@ gccgm2_BuildSetTypeFromSubrange (name, subrangeType, lowval, highval)
 
   layout_type (subrangeType);
   settype = build_set_type (build_tree_list (subrangeType, convert_type_to_range (subrangeType)), 0);
-  if (gccgm2_CompareTrees (noelements, gccgm2_BuildIntegerConstant (BITS_PER_WORD)) == 0)
+  if (gccgm2_CompareTrees (noelements, gccgm2_BuildIntegerConstant (BITS_PER_WORD)) <= 0)
     TYPE_MAX_VALUE (settype) = TYPE_MAX_VALUE (gccgm2_GetWordType ());
   else
     TYPE_MAX_VALUE (settype) = gccgm2_BuildSub (gccgm2_BuildLSL (gccgm2_GetWordOne(), noelements, FALSE),
